src/objects/Session_Speaker__c.object
<CustomObject>
    <fields>
        <fullName>Session_Speaker__c</fullName>
        <displayFormat>SESP-{00000}</displayFormat>
        <label>Session_Speaker</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Sesion</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Session_Speakers</relationshipLabel>
        <relationshipName>Session_Speakers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <label>Speaker</label>
        <referenceTo>Speaker__c</referenceTo>
        <relationshipLabel>Session_Speakers</relationshipLabel>
        <relationshipName>Session_Speakers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Session_Speaker</label>
    <nameField>
        <label>Session_Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session_Speakers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>